--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
@@ -13,6 +20,76 @@
     <title>Time Management</title>
   </head>
   <body>
+    <div class="wrapper vh-100 pt-5">
+      <div class="container">
+        <!-- title -->
+        <h1 class="text-center">Time Management</h1>
+
+        <!-- form -->
+        <form action="javascript:void(0)" onsubmit="handleSubmit(this)">
+          <div class="row g-2 mt-5 shadow-lg border p-5 rounded">
+            <div class="col-md-7">
+              <input
+                type="text"
+                class="form-control"
+                placeholder="Task"
+                aria-label="Task"
+                name="task"
+                required
+              />
+            </div>
+            <div class="col-md-2">
+              <input
+                type="number"
+                class="form-control"
+                placeholder="Hours"
+                aria-label="Hours"
+                name="hour"
+                required
+              />
+            </div>
+            <div class="col-md-3 d-grid">
+              <button type="submit" class="btn btn-primary">ADD</button>
+            </div>
+          </div>
+        </form>
+        <!-- tables -->
+        <div class="row border rounded mt-5 g-2">
+          <!-- entry list -->
+          <div class="col-md">
+            <h2 class="text-center">Entry List</h2>
+            <table class="table table-striped table-hover my-table">
+              <hr />
+              <tbody id="entryList"></tbody>
+            </table>
+          </div>
+          <!-- badlist -->
+          <div class="col-md">
+            <h2 class="text-center">Optimize List</h2>
+            <table class="table table-striped table-hover my-table">
+              <hr />
+              <tbody>
+                <tr>
+                  <td>1</td>
+                  <td>Watching TV</td>
+                  <td>5hrs</td>
+                  <td class="text-end">
+                    <button class="btn btn-warning btn-sm">
+                      <i class="fa-solid fa-arrow-left"></i>
+                    </button>
+                    <button class="btn btn-danger btn-sm"><i class="fa-solid fa-trash"></i></button>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+            <div class="alert alert-success">You could have saved 4 hrs</div>
+          </div>
+        </div>
+
+        <!-- total hrs -->
+        <div class="alert alert-success mt-5">Total hours allocated = 14hrs</div>
+      </div>
+    </div>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
