--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <title>Time Management</title>
   </head>
   <body>
-    <div class="wrapper vh-100 pt-5">
+    <div class="wrapper p-5">
       <div class="container">
         <!-- title -->
         <h1 class="text-center">Time Management</h1>
@@ -38,17 +38,17 @@
                 required
               />
             </div>
-            <div class="col-md-2">
+            <div class="col-2">
               <input
                 type="number"
                 class="form-control"
                 placeholder="Hours"
                 aria-label="Hours"
-                name="hour"
+                name="hour" min="1"
                 required
               />
             </div>
-            <div class="col-md-3 d-grid">
+            <div class="col-3 d-grid">
               <button type="submit" class="btn btn-primary">ADD</button>
             </div>
           </div>
@@ -68,26 +68,16 @@
             <h2 class="text-center">Optimize List</h2>
             <table class="table table-striped table-hover my-table">
               <hr />
-              <tbody>
-                <tr>
-                  <td>1</td>
-                  <td>Watching TV</td>
-                  <td>5hrs</td>
-                  <td class="text-end">
-                    <button class="btn btn-warning btn-sm">
-                      <i class="fa-solid fa-arrow-left"></i>
-                    </button>
-                    <button class="btn btn-danger btn-sm"><i class="fa-solid fa-trash"></i></button>
-                  </td>
-                </tr>
+              <tbody id="optimizeList">
+               
               </tbody>
             </table>
-            <div class="alert alert-success">You could have saved 4 hrs</div>
+            <div class="alert alert-success" id="savedElm">You could have saved 0 hrs</div>
           </div>
         </div>
 
         <!-- total hrs -->
-        <div class="alert alert-success mt-5">Total hours allocated = 14hrs</div>
+        <div class="alert alert-success mt-5 alert-hour">Total hours allocated = 0hrs</div>
       </div>
     </div>
     <link
