--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 required
               />
             </div>
-            <div class="col-2">
+            <div class="col">
               <input
                 type="number"
                 class="form-control"
@@ -48,7 +48,7 @@
                 required
               />
             </div>
-            <div class="col-3 d-grid">
+            <div class="col d-grid">
               <button type="submit" class="btn btn-primary">ADD</button>
             </div>
           </div>
