final touch shadow and border to container

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <div class="wrapper p-5">
-      <div class="container">
+      <div class="container border rounded p-5 shadow-lg">
         <!-- title -->
         <h1 class="text-center">Time Management</h1>
 
