--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <!-- form -->
         <form action="javascript:void(0)" onsubmit="handleSubmit(this)">
           <div class="row g-2 mt-5 shadow-lg border p-5 rounded">
-            <div class="col-md-7">
+            <div class="col-md-6">
               <input
                 type="text"
                 class="form-control"
@@ -44,9 +44,17 @@
                 class="form-control"
                 placeholder="Hours"
                 aria-label="Hours"
-                name="hour" min="1"
+                name="hour"
+                min="1"
                 required
               />
+            </div>
+            <div class="col">
+              <select class="form-control" name="duration" id="" required>
+                <option value="">Per</option>
+                <option value="day">Day</option>
+                <option value="week">Week</option>
+              </select>
             </div>
             <div class="col d-grid">
               <button type="submit" class="btn btn-primary">ADD</button>
@@ -68,16 +76,40 @@
             <h2 class="text-center">Optimize List</h2>
             <table class="table table-striped table-hover my-table">
               <hr />
-              <tbody id="optimizeList">
-               
-              </tbody>
+              <tbody id="optimizeList"></tbody>
             </table>
-            <div class="alert alert-success" id="savedElm">You could have saved 0 hrs</div>
+            <div class="alert alert-success" id="savedElm">
+              You could have saved 0 hrs
+            </div>
           </div>
         </div>
 
         <!-- total hrs -->
-        <div class="alert alert-success mt-5 alert-hour">Total hours allocated = 0hrs</div>
+        <div class="alert alert-success mt-5 alert-hour">
+          Total hours allocated = 0hrs
+        </div>
+      </div>
+      <div>
+        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                ...
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        
       </div>
     </div>
     <link
