unsaved changes saved for future

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           </div>
         </form>
         <!-- tables -->
-        <div class="row border rounded mt-5 g-2">
+        <div class="row border rounded mt-5 g-2 shadow-lg">
           <!-- entry list -->
           <div class="col-md">
             <h2 class="text-center">Entry List</h2>
